--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "homepage": "./",
     "private": true,
     "dependencies": {
+        "@ant-design/icons": "^4.7.0",
         "@fortawesome/fontawesome-svg-core": "^1.3.0",
         "@fortawesome/free-brands-svg-icons": "^6.0.0",
         "@fortawesome/free-regular-svg-icons": "^6.0.0",
