--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
         "antd": "^4.22.7",
+        "antd-img-crop": "^4.2.4",
         "bootstrap": "^5.2.0",
         "classnames": "^2.3.1",
         "mdb-react-ui-kit": "^4.1.0",
