--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "classnames": "^2.3.1",
         "mdb-react-ui-kit": "^4.1.0",
         "normalize.css": "^8.0.1",
+        "rc-tween-one": "^3.0.6",
         "react": "^18.2.0",
         "react-bootstrap": "^2.5.0",
         "react-dom": "^18.2.0",
