--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "fe-tsp-dashboard",
     "version": "0.1.0",
-    "homepage": "https://hoangtc125.github.io/ultimate-store-management-fe/",
+    "homepage": "./",
     "private": true,
     "dependencies": {
         "@ant-design/icons": "^4.7.0",
