--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "sass": "^1.54.4",
+        "socket.io-client": "^2.3.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
